--- a/client/style.css
+++ b/client/style.css
@@ -1,29 +1,33 @@
+/* General body styling */
 body {
   margin: 0;
   padding: 0;
-  font-family: "Sergoe UI", sans-serif;
+  font-family: "Segoe UI", sans-serif;
   background-color: #242424;
-  color: white;
+  color: rgb(167, 218, 184);
   display: flex;
-  justify-content: center; /* Center horizontally */
-  align-items: flex-start; /* Align content starting from the top */
+  justify-content: center;
+  align-items: flex-start;
   min-height: 100vh;
 }
 
+/* Header styles */
 h1 {
   font-size: 32px;
   text-align: left;
   margin-bottom: 20px;
 }
 
+/* Main container styling */
 .container {
   max-width: 88%;
   width: 90%;
   padding: 10px;
   text-align: center;
-  margin-top: 20px; /* Adjust this to control how close to the top you want */
+  margin-top: 20px;
 }
 
+/* Form styles */
 form {
   display: flex;
   flex-direction: column;
@@ -38,21 +42,25 @@ input {
   max-width: 400px;
   padding: 10px;
   font-size: 16px;
-  border: 1px solid #ccc;
+  border: 1px solid #b4e4d6;
   border-radius: 5px;
+  background-color: #343534; 
+  color: white; 
 }
 
+/* Button styling */
 button {
-  padding: 10px 20px;
-  font-size: 16px;
-  color: white;
-  background-color: #646cff;
+  padding: 10px 15px;
+  background-color: #61f3af; 
+  color: #050505; 
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  transition: background-color 0.3s ease; /
 }
+
 button:hover {
-  background-color: #535bf2;
+  background-color: #5e9fe0;
 }
 
 .filter-sort {
@@ -69,21 +77,40 @@ button {
   max-width: 200px;
 }
 
+select {
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #333;
+  color: white;
+  border: 1px solid #ccc;
+}
+
+blockquote {
+  font-weight: bold;
+  color: #523135;
+}
+
+li p:last-child {
+  color: #585131;
+}
+
 ul {
   list-style-type: none;
   padding: 0;
 }
 
 li {
-  background-color: #333;
+  background-color: #d2f3e5;
   padding: 15px;
   margin-bottom: 10px;
   border-radius: 5px;
+  color: rgb(19, 49, 88);
 }
 
+/* Responsive media queries for smaller screens */
 @media (max-width: 768px) {
   .container {
-    width: 90%;
+    width: 82%;
     margin-top: 10px; /* Adjust top margin for smaller screens */
   }
 
